test/corpus/features.txt
================
Program sigils
================
PROG AQUA
END
+PROG AQUA
END
-PROG AQUA
END
$PROG AQUA
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword))))
  (commented_program_scope
    (commented_program_header
      (commented_program_sigil)
      (module_name))
    (end_record
      (control_keyword))))

===================================================
Embedded variables in neutral preprocessor and math
===================================================
#define project = $(probase)
#define load = #Q_w+#x
#if $(project)<>$(probase)
#elseif #condition + 1
#endif
+prog aqua
head (#L_1)+(#L_2-#L_1+#L_0)*(#i/(#L_n-1)) (D)
end
---

(source_file
  (preprocessor_define_statement
    (preprocessor_keyword)
    (preprocessor_name)
    (preprocessor_value
      (dollar_variable)))
  (preprocessor_define_statement
    (preprocessor_keyword)
    (preprocessor_name)
    (preprocessor_value
      (hash_variable
        (hash_variable_name))
      (preprocessor_literal)
      (hash_variable
        (hash_variable_name))))
  (preprocessor_if_header
    (preprocessor_keyword)
    (preprocessor_condition
      (dollar_variable)
      (preprocessor_literal)
      (dollar_variable)))
  (preprocessor_elseif_header
    (preprocessor_keyword)
    (preprocessor_condition
      (hash_variable
        (hash_variable_name))
      (preprocessor_literal)))
  (preprocessor_endif_record
    (preprocessor_keyword))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (parenthesized_expression
            (hash_variable
              (hash_variable_name)))
          (bare_value)
          (parenthesized_expression
            (hash_variable
              (hash_variable_name))
            (parenthesized_content)
            (hash_variable
              (hash_variable_name))
            (parenthesized_content)
            (hash_variable
              (hash_variable_name)))
          (bare_value)
          (parenthesized_expression
            (hash_variable
              (hash_variable_name))
            (parenthesized_content)
            (parenthesized_expression
              (hash_variable
                (hash_variable_name))
              (parenthesized_content)))
          (parenthesized_expression
            (parenthesized_content))))
      (end_record
        (control_keyword)))))

===========================================================
Unscoped DEFINE bodies expose variables before first program
===========================================================
#DEFINE ella-lanes
lane t.1 $(lanes-props)
lane t.2 $(lanes-props)
#ENDDEF
---

(source_file
  (preprocessor_define_header
    (preprocessor_keyword)
    (preprocessor_name))
  (unscoped_record
    (bare_value)
    (bare_value)
    (dollar_variable))
  (unscoped_record
    (bare_value)
    (bare_value)
    (dollar_variable))
  (preprocessor_enddef_record
    (preprocessor_keyword)))

========================================
CDB statements and positional references
========================================
+PROG TEMPLATE
@KEY SECRET ; IF #A > 0
HEAD @name,@1,@-2,@(#A+1),@???
ENDIF
@CDB 7
@ descriptive metadata
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (cdb_statement
        (cdb_keyword)
        (bare_value))
      (if_block
        (if_header
          (control_keyword)
          (hash_variable
            (hash_variable_name))
          (generic_expression)
          (number))
        (command
          (command_name)
          (record
            (at_reference)
            (at_reference)
            (at_reference)
            (at_reference)
            (invalid_at_reference)))
        (endif_record
          (control_keyword)))
      (cdb_statement
        (cdb_keyword)
        (number))
      (metadata)
      (end_record
        (control_keyword)))))

================================================
Recursive hash arguments and formatted variables
================================================
+PROG AQUA
HEAD #BN(#BN(0)) #(#Nold,8.1) # literal
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (hash_variable
            (hash_variable_name)
            (hash_arguments
              (hash_variable
                (hash_variable_name)
                (hash_arguments
                  (hash_argument_content)))))
          (formatted_value
            (parenthesized_expression
              (hash_variable
                (hash_variable_name))
              (parenthesized_content)))
          (literal_hash)
          (bare_value)))
      (end_record
        (control_keyword)))))

=========================================
Quoted and suffix-apostrophe value forms
=========================================
+PROG AQUA
HEAD ''single doubled'' ""double doubled"" 'single ''quoted'' $(single)' "double ""quoted"" $(double)"
HEAD BAUMANN'S f'= tent'
HEAD 'unterminated
HEAD "unterminated
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (string
            (single_doubled_quoted_string))
          (string
            (double_doubled_quoted_string))
          (string
            (single_quoted_string
              (dollar_variable)))
          (string
            (double_quoted_string
              (dollar_variable)))))
      (command
        (command_name)
        (record
          (bare_value)
          (bare_value)
          (bare_value)))
      (command
        (command_name)
        (record
          (unterminated_string
            (unterminated_single_quoted_string))))
      (command
        (command_name)
        (record
          (unterminated_string
            (unterminated_double_quoted_string))))
      (end_record
        (control_keyword)))))

=========================================
Adjacent strings in comma-separated lists
=========================================
+PROG TEMPLATE
LET#literal 'Literal0','Literal1'
STO#time '0:00','1:00'
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (variable_statement
        (variable_keyword)
        (hash_variable
          (hash_variable_name))
        (string
          (single_quoted_string))
        (string
          (single_quoted_string)))
      (variable_statement
        (variable_keyword)
        (hash_variable
          (hash_variable_name))
        (string
          (single_quoted_string))
        (string
          (single_quoted_string)))
      (end_record
        (control_keyword)))))

========================
Named orphan terminators
========================
+PROG AQUA
ELSEIF #A
ELSE note
ENDIF
ENDLOOP 3
</TEXT>
</PICT>
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (orphan_elseif_record
        (control_keyword)
        (hash_variable
          (hash_variable_name)))
      (orphan_else_record
        (control_keyword)
        (bare_value))
      (orphan_endif_record
        (control_keyword))
      (orphan_endloop_record
        (control_keyword)
        (number))
      (orphan_text_end
        (text_delimiter))
      (orphan_picture_end
        (picture_delimiter))
      (end_record
        (control_keyword)))))

==============================
Picture blocks in body and tail
==============================
+PROG AQUA
<PICT>
HEAD #inside 'body'
</PICT>
END
<PICT>
HEAD $(tail) "tail"
</PICT>
+PROG AQUA
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (picture_block
        (picture_start
          (picture_delimiter))
        (command
          (command_name)
          (record
            (hash_variable
              (hash_variable_name))
            (string
              (single_quoted_string))))
        (picture_end
          (picture_delimiter)))
      (end_record
        (control_keyword)))
    (picture_block
      (picture_start
        (picture_delimiter))
      (command
        (command_name)
        (record
          (dollar_variable)
          (string
            (double_quoted_string))))
      (picture_end
        (picture_delimiter))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))))

====================================
Numeric lists and punctuated values
====================================
+PROG AQUA
HEAD 1 -1.5 2e3 1,2,3 :AXIS ~OR \REF
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (number)
          (number)
          (number)
          (number_list)
          (punctuated_value)
          (punctuated_value)
          (punctuated_value)))
      (end_record
        (control_keyword)))))

=========================================
Transparent scope directives and values
=========================================
11 Belki prefabrykowane
$prog maxima
#define maxima-supp
supp $(no) mami auto
#enddef
+prog template
head variables
end
+prog sofiload
line qgrp 'PP' type pg #q_bk[N/m] x1 #x1
end
+prog ase
grp (80 89 1) ics1 11 phif 0
grp (24001 24000+#idt 1)
ende
---

(source_file
  (ignored_text)
  (commented_program_scope
    (commented_program_header
      (commented_program_sigil)
      (module_name))
    (preprocessor_define_header
      (preprocessor_keyword)
      (preprocessor_name))
    (command
      (command_name)
      (record
        (dollar_variable)
        (bare_value)
        (bare_value)))
    (preprocessor_enddef_record
      (preprocessor_keyword)))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)))
      (end_record
        (control_keyword))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (string
            (single_quoted_string))
          (item_sequence
            (item_name)
            (bare_value)
            (hash_variable
              (hash_variable_name))
            (unit))
          (item_sequence
            (item_name)
            (hash_variable
              (hash_variable_name)))))
      (end_record
        (control_keyword))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (sequence_generator
            (generator_part
              (generator_literal))
            (generator_part
              (generator_literal))
            (generator_part
              (generator_literal)))
          (bare_value)
          (number)
          (item_sequence
            (item_name)
            (number))))
      (command
        (command_name)
        (record
          (sequence_generator
            (generator_part
              (generator_literal))
            (generator_part
              (generator_literal)
              (hash_variable
                (hash_variable_name)))
            (generator_part
              (generator_literal)))))
      (end_record
        (control_keyword)))))

=================================
Annotated physical continuation
=================================
PROG AQUA
QSP P3 0 $$ Spannglieder $ tendon
    P6 0
ENDE
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (number)
          (continuation)
          (bare_value)
          (number)))
      (end_record
        (control_keyword)))))

==========================================
Preprocessor auxiliaries preserve command
==========================================
PROG SOFIMSHA
NODE 1 X 0
#INCLUDE stagedesign
#DEFINE #hs_results=value; Anhang CC
X 2 Y 0
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (number)
          (item_sequence
            (item_name)
            (number)))
        (preprocessor_directive
          (preprocessor_keyword)
          (bare_value))
        (preprocessor_define_statement
          (preprocessor_keyword)
          (preprocessor_name)
          (preprocessor_value
            (preprocessor_literal)))
        (implicit_record
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number))))
      (end_record
        (control_keyword)))))

============================
Mojibake BOM before comment
============================
ï»¿!#!Info example
PROG AQUA
END
---

(source_file
  (comment)
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))))

===============================
Prefixed positional references
===============================
PROG AQUA
SPT OM 0 0 REFS :AXIS
    UM 0 0 REFS :A_UM
    11 0.90 0.00 REFP OR +UR
    15 0.00 0.00 REFP OM ~OR
ENDE
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (number)
          (number)
          (item_sequence
            (item_name)
            (punctuated_value)))
        (implicit_record
          (bare_value)
          (number)
          (number)
          (item_sequence
            (item_name)
            (punctuated_value)))
        (implicit_record
          (number)
          (number)
          (number)
          (item_sequence
            (item_name)
            (bare_value)
            (bare_value)))
        (implicit_record
          (number)
          (number)
          (number)
          (item_sequence
            (item_name)
            (bare_value)
            (punctuated_value))))
      (end_record
        (control_keyword)))))

========================
Multiple input blocks
========================
+PROG AQUA
HEAD One
END

HEAD Two
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)))
      (end_record
        (control_keyword)))
    (command
      (command_name)
      (record
        (bare_value)))
    (end_record
      (control_keyword))))

====================================
Variable with semicolon command list
====================================
PROG ASE
HEAD
sto#lf 13 ; SYST prob TH3 TOL -0.01 PLC #lf-1 ; GRP 12 OFF ; CTRL ITER 3 V2 1 ; CTRL BEAM 5
LC #lf FACD 1
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record)
        (variable_statement
          (variable_keyword)
          (hash_variable
            (hash_variable_name))
          (number)))
      (command
        (command_name)
        (record
          (item_sequence
            (item_name)
            (bare_value))
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (hash_variable
              (hash_variable_name))
            (number))))
      (command
        (command_name)
        (record
          (number)
          (bare_value)))
      (command
        (command_name)
        (record
          (bare_value)
          (number)
          (item_sequence
            (item_name)
            (number))))
      (command
        (command_name)
        (record
          (bare_value)
          (number)))
      (command
        (command_name)
        (record
          (hash_variable
            (hash_variable_name))
          (item_sequence
            (item_name)
            (number))))
      (end_record
        (control_keyword)))))

================================
Continuation and implicit record
================================
+PROG SOFIMSHA
NODE 1 X 0 $$
 Y 0 Z 0
 2 X 1 Y 0 Z 0
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (number)
          (item_sequence
            (item_name)
            (number))
          (continuation)
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number)))
        (implicit_record
          (number)
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number))))
      (end_record
        (control_keyword)))))

========================
Semicolon commands
========================
+PROG WING
SIZE W 10 H 20; STRU NO 1
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number))))
      (command
        (command_name)
        (record
          (bare_value)
          (number)))
      (end_record
        (control_keyword)))))

========================
Nested control flow
========================
+PROG SOFIMSHA
IF #1 > 0
LOOP 2
NODE 1 X 0
EXIT_ITERATION
ENDLOOP
ELSE
NODE 2 X 1
ENDIF
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (if_block
        (if_header
          (control_keyword)
          (hash_variable
            (hash_variable_name))
          (generic_expression)
          (number))
        (loop_block
          (loop_header
            (control_keyword)
            (number))
          (command
            (command_name)
            (record
              (number)
              (item_sequence
                (item_name)
                (number))))
          (exit_iteration_record
            (control_keyword))
          (endloop_record
            (control_keyword)))
        (else_header
          (control_keyword))
        (command
          (command_name)
          (record
            (number)
            (item_sequence
              (item_name)
              (number))))
        (endif_record
          (control_keyword)))
      (end_record
        (control_keyword)))))

=========================
Preprocessor structures
=========================
#DEFINE SINGLE=1
#DEFINE BLOCK
ANY FOO #1
#ENDDEF
#IF #version >= 2024 & (#enabled)
+PROG AQUA
HEAD A
END
#ELSEIF #version = 2023
+PROG SOFIMSHA
NODE 1 X 0
END
#ELSE
SYS echo hi
#ENDIF
---

(source_file
  (preprocessor_define_statement
    (preprocessor_keyword)
    (preprocessor_name)
    (preprocessor_value
      (preprocessor_literal)))
  (preprocessor_define_header
    (preprocessor_keyword)
    (preprocessor_name))
  (unscoped_record
    (bare_value)
    (bare_value)
    (hash_variable
      (hash_variable_name)))
  (preprocessor_enddef_record
    (preprocessor_keyword))
  (preprocessor_if_header
    (preprocessor_keyword)
    (preprocessor_condition
      (hash_variable
        (hash_variable_name))
      (preprocessor_literal)
      (hash_variable
        (hash_variable_name))
      (preprocessor_literal)))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)))
      (end_record
        (control_keyword)))
    (preprocessor_elseif_header
      (preprocessor_keyword)
      (preprocessor_condition
        (hash_variable
          (hash_variable_name))
        (preprocessor_literal))))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (number)
          (item_sequence
            (item_name)
            (number))))
      (end_record
        (control_keyword)))
    (preprocessor_else_header
      (preprocessor_keyword)))
  (sys_statement
    (sys_sigil)
    (bare_value)
    (bare_value))
  (preprocessor_endif_record
    (preprocessor_keyword)))

===================================
Variable keeps the inherited record
===================================
+PROG SOFIMSHA
NODE 1 X 0
LET#A =1
X 2 Y 0
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (number)
          (item_sequence
            (item_name)
            (number)))
        (variable_statement
          (variable_keyword)
          (hash_variable
            (hash_variable_name))
          (expression)
          (number))
        (implicit_record
          (item_sequence
            (item_name)
            (number))
          (item_sequence
            (item_name)
            (number))))
      (end_record
        (control_keyword)))))

===========================
Opaque text and string body
===========================
+PROG AQUA
HEAD 'a; $ PROG'
<TEXT>
PROG not parsed; $ not comment
</TEXT>
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (string
            (single_quoted_string))))
      (text_block
        (text_start
          (text_delimiter)
          (text_delimiter))
        (text_content)
        (text_fragment)
        (text_content)
        (text_end))
      (end_record
        (control_keyword)))))

========================
Apply and system records
========================
APPLY file.dat
SYS command args
---

(source_file
  (apply_statement
    (apply_sigil)
    (bare_value))
  (sys_statement
    (sys_sigil)
    (bare_value)
    (bare_value)))

==================================
Implicit record starts like command
==================================
PROG AQUA
QSP P3 0 86.6
    P6 0 -86.6
ENDE
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (number)
          (number))
        (implicit_record
          (bare_value)
          (number)
          (number)))
      (end_record
        (control_keyword)))))
